--- a/style.css
+++ b/style.css
@@ -56,3 +56,32 @@ body {
 .about-video {
   height: 100vh;
 }
+
+.about-stack {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.about-stack h2 {
+  margin-top: 70px;
+  font-size: 30px;
+}
+
+.stack {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  grid-template-rows: 300px 200px 200px;
+  /* column-gap: 75px;
+  row-gap: 60px; */
+}
+
+.stack-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.programming-languages {
+}
