--- a/style.css
+++ b/style.css
@@ -99,3 +99,18 @@ body {
   list-style: none;
   gap: 10px;
 }
+
+.about-projects {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.about-projects h2 {
+  margin-top: 60px;
+  font-size: 30px;
+}
+
+.project-item a {
+  display: block;
+}
