--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 .about-stack h2 {
+  align-self: flex-start;
   margin: 0 0 20px;
   font-size: 28px;
 }
@@ -108,12 +109,32 @@ body {
 .about-projects {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
 }
 
 .about-projects h2 {
+  align-self: flex-start;
   margin-top: 60px;
   font-size: 30px;
+}
+
+.project {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  grid-template-rows: repeat(2, 300px);
+}
+
+.project-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.project-item h3 {
+  margin-bottom: 0;
 }
 
 .project-item a {
