--- a/style.css
+++ b/style.css
@@ -64,7 +64,10 @@ body {
 }
 
 .about-video {
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .about-stack {
@@ -73,12 +76,12 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  padding: 45px 20px;
+  padding: 10px 0;
 }
 
 .about-stack h2 {
   align-self: flex-start;
-  margin: 0 0 20px;
+  margin-bottom: 20px;
   font-size: 28px;
 }
 
@@ -86,6 +89,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 400px);
   grid-template-rows: repeat(2, 300px);
+  gap: 10px;
   /* column-gap: 75px;
   row-gap: 60px; */
 }
@@ -95,6 +99,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  border: 1px solid #000;
 }
 
 .stack-item ul {
@@ -116,14 +121,17 @@ body {
 
 .about-projects h2 {
   align-self: flex-start;
-  margin-top: 60px;
-  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 28px;
+  padding: 10px 0;
 }
 
 .project {
   display: grid;
   grid-template-columns: repeat(3, 400px);
   grid-template-rows: repeat(2, 300px);
+  gap: 10px;
 }
 
 .project-item {
@@ -131,6 +139,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  border: 1px solid black;
 }
 
 .project-item h3 {
@@ -140,3 +149,52 @@ body {
 .project-item a {
   display: block;
 }
+
+.about-contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.contact {
+  display: flex;
+  gap: 70px;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: #000;
+}
+
+.contact-img {
+  width: 100px;
+  height: auto;
+}
+
+.portfolio-footer {
+  width: 100%;
+  height: 120px;
+  background-color: #1c1b1b;
+  color: white;
+}
+
+.portfolio-footer a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+/* .contact-card p {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.contact-card a {
+  text-decoration: none;
+  color: rgb(40, 40, 40);
+  font-size: 20px;
+} */
